<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvWelcome"
            style="@style/TextContent.Bold.Big"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="8dp"
            android:text="@string/welcome"
            android:textColor="?android:textColorPrimary"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvPleaseLogin"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPleaseLogin"
            style="@style/TextContent.Medium"
            android:text="@string/please_login_first"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintStart_toStartOf="@+id/tvEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

        <TextView
            android:id="@+id/tvEmail"
            style="@style/TextContent.Bold.Medium"
            android:layout_marginTop="24dp"
            android:text="@string/email"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintStart_toStartOf="@+id/emailEditTextLayout"
            app:layout_constraintTop_toBottomOf="@+id/tvPleaseLogin" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditTextLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPassword"
            style="@style/TextContent.Bold.Medium"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintStart_toStartOf="@+id/emailEditTextLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditTextLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/emailEditTextLayout"
            app:layout_constraintStart_toStartOf="@+id/tvPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.bangkit.skutapplication.view.customview.MyEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.bangkit.skutapplication.view.customview.MyButton
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/passwordEditTextLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

        <TextView
            android:id="@+id/tvRegister"
            style="@style/TextContent.small"
            android:layout_marginTop="32dp"
            android:text="@string/does_not_have_an_account"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/register"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvRegister"
            app:layout_constraintStart_toEndOf="@+id/tvRegister"
            app:layout_constraintTop_toTopOf="@+id/tvRegister" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="7dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

