<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.register.RegisterActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/switch_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_black_24" />

        <TextView
            android:id="@+id/tvRegister"
            style="@style/TextContent.Bold.Big"
            android:layout_marginTop="32dp"
            android:text="@string/register"
            android:textColor="?android:textColorPrimary"
            android:textSize="50sp"
            app:layout_constraintStart_toStartOf="@+id/tvFillData"
            app:layout_constraintTop_toBottomOf="@+id/backButton" />

        <TextView
            android:id="@+id/tvFillData"
            style="@style/TextContent.Medium"
            android:text="@string/fill_your_data_correctly"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintStart_toStartOf="@+id/tvEmail"
            app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

        <TextView
            android:id="@+id/tvName"
            style="@style/TextContent.Bold.Medium"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintStart_toStartOf="@+id/emailEditTextLayout"
            app:layout_constraintTop_toBottomOf="@+id/tvFillData" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameEditTextLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/emailEditTextLayout"
            app:layout_constraintStart_toStartOf="@+id/emailEditTextLayout"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvEmail"
            style="@style/TextContent.Bold.Medium"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintStart_toStartOf="@+id/emailEditTextLayout"
            app:layout_constraintTop_toBottomOf="@+id/nameEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditTextLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPassword"
            style="@style/TextContent.Bold.Medium"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintStart_toStartOf="@+id/emailEditTextLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditTextLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/emailEditTextLayout"
            app:layout_constraintStart_toStartOf="@+id/tvPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.bangkit.skutapplication.view.customview.MyEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPassword2"
            style="@style/TextContent.Bold.Medium"
            android:layout_marginTop="16dp"
            android:text="@string/re_type_password"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintStart_toStartOf="@+id/passwordEditTextLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditTextLayout2"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLayout"
            app:layout_constraintStart_toStartOf="@+id/tvPassword2"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword2"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <EditText
                android:id="@+id/passwordEditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.bangkit.skutapplication.view.customview.MyButton
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="40dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLayout2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/passwordEditTextLayout2"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout2" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="7dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

